[package]
name = "unthbuf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Longor1996"]
readme = "README.md"

categories = ["data-structures"]
keywords = ["bitbuffer", "memory", "packed", "varint", "compact"]
description = "Unsigned N-bit Buffer: A structure that holds a fixed buffer of `bits`-sized unsigned integer elements."
repository = "https://github.com/Longor1996/unthbuf"
documentation = "https://docs.rs/unthbuf/"

[dev-dependencies]
rand = "0.8.5"
